# xESMF

./: .pre-commit-config.yaml  .prettierrc.toml  CHANGES.rst  MANIFEST.in  README.rst  codecov.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test_pole_kind.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  linting.yaml  pypi.yaml
binder/: environment.yml
ci/: doc.yml  environment-upstream-dev.yml  environment.yml
doc/: conf.py  index.rst  installation.rst  internal_api.rst  large_problems_on_HPC.rst  other_tools.rst  releases.rst  requirements.txt  user_api.rst  why.rst
doc/notebooks/: Compare_algorithms.ipynb  Curvilinear_grid.ipynb  Dask.ipynb  Masking.ipynb  Pure_numpy.ipynb  Rectilinear_grid.ipynb  Spatial_Averaging.ipynb  Unstructured_grid.ipynb  Using_LocStream.ipynb
xesmf/: __init__.py  _version.py  backend.py  data.py  frontend.py  smm.py  util.py
xesmf/tests/: conftest.py  test_backend.py  test_frontend.py  test_oceanmodels.py  test_smm.py  test_util.py
